@@ -1,3 +1,10 @@
+2004-12-12  Adam Heath  <doogie@brainfood.com>
+
+	* libraries/javalib/Makefile.am, libraries/javalib/Makefile.in,
+	  tools/gjdoc/javalib/Makefile.am, tools/gjdoc/javalib/Makefile.in:
+	  Reworked jar creation stuff, to not be verbose, and handle the
+	  case if ctrl-c is hit before all the jar cmds from completing.
+
 2004-12-12  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* kaffe/kaffevm/jni/jni-base.c
